创建好友对话频道
