# swagger/swagger.json
@@ -88,99 +88,21 @@
                 "tags": [
                     "file"
                 ],
-                "description": "login by username and password",
-                "operationId": "FileController.login",
+                "description": "upload file",
+                "operationId": "FileController.upload",
                 "parameters": [
                     {
-                        "in": "query",
-                        "name": "category_id",
-                        "description": "category id",
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "brand_id",
-                        "description": "brand id",
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "query of search",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "segment",
-                        "description": "segment",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sort",
-                        "description": "sort option",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "dir",
-                        "description": "direction asc or desc",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "offset",
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "count limit",
-                        "type": "integer",
-                        "format": "int64"
-                    },
-                    {
-                        "in": "query",
-                        "name": "price",
-                        "description": "price",
+                        "in": "string",
+                        "name": "formData",
+                        "description": "the path of upload file",
                         "schema": {
-                            "$ref": "#/definitions/.float"
+                            "$ref": "#/definitions/.true"
                         }
-                    },
-                    {
-                        "in": "query",
-                        "name": "special_price",
-                        "description": "whether this is special price",
-                        "type": "boolean"
-                    },
-                    {
-                        "in": "query",
-                        "name": "size",
-                        "description": "size filter",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "color",
-                        "description": "color filter",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "format",
-                        "description": "choose return format",
-                        "type": "boolean"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "schema": {
-                            "$ref": "#/definitions/.ProductList"
-                        }
+                        "description": "upload success"
                     },
                     "400": {
                         "description": "no enough input"
@@ -374,6 +296,9 @@
             "type": "object"
         },
         ".float": {
+            "type": "object"
+        },
+        ".true": {
             "type": "object"
         },
         "models.User": {
